profilelist1exp/unpackaged/objects/FAP_Competency__mdt.object
<CustomObject>
    <description>FAP Competency Object functionality in Custom Metadata Types.</description>
    <fields>
        <fullName>Account_Competency__c</fullName>
        <label>Account Competency</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>APJ</fullName>
                    <default>true</default>
                    <label>APJ</label>
                </value>
                <value>
                    <fullName>EC-EMEA</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>LATAM</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Services_Comptency__c</fullName>
        <label>Services Comptency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_type__c</fullName>
        <label>User type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Authenticated</fullName>
                    <default>true</default>
                    <label>Authenticated</label>
                </value>
                <value>
                    <fullName>Un-authenticated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>FAP Competency</label>
    <listViews>
        <fullName>FAP_Competency</fullName>
        <columns>Services_Comptency__c</columns>
        <columns>Account_Competency__c</columns>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>User_type__c</columns>
        <columns>Region__c</columns>
        <columns>IsProtected</columns>
        <columns>NamespacePrefix</columns>
        <filterScope>Everything</filterScope>
        <label>FAP Competency</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>FAP Competencies</pluralLabel>
</CustomObject>